tests/fixtures/invalid/bytes_sub_bytes.py
# Cannot subtract Bytes and Bytes
x: bytes = b"hello" - b"hello"
